# consolidator

./: Cargo.toml  README.md  compare_ring_vs_ws_chunked.py  compare_single_instrument.py  dynamic_tail.py  filters.json  inspect_all_chunks.py  inspect_ring.py  metrics (copy).csv  metrics.csv  mmap_trade_compare  mmap_trade_compare.cpp  mmap_trade_watcher  mmap_trade_watcher.cpp  plot_and_compare_with_offset.py  plot_consolidator_results.py  plot_metrics.py  plot_metrics_newformat.py  ring_health_check.py  ring_reader.py  ring_reader_noindex.py  ring_tailer.py  stream_and_wsplot.py  stream_trades_compare_buffered.py  ws_vs_ring_debug.py
connectors/bin-binance/: Cargo.toml
connectors/bin-binance/src/: main.rs
connectors/bin-binance/src/ingest/: mmap_trade_compare  mod.rs  sources_binance.rs
connectors/bin-deribit/: Cargo.toml
connectors/bin-deribit/src/: main.rs
connectors/bin-deribit/src/ingest/: filters.json  metrics.csv  mmap_trade_compare  mod.rs  sources_deribit.rs
core/: Cargo.toml
core/src/: lib.rs  metrics.rs  types.rs  writer.rs
core/src/storage/: mmap_ring.rs  mod.rs  writer_task.rs
plots/: ETHUSDT_compared.csv  ETHUSDT_summary.txt
plots/BTC/: BTCUSDT_compared.csv  BTCUSDT_summary.txt
plots/ETH/: ETHUSDT_compared.csv  ETHUSDT_summary.txt
plots_ADA/: ADAUSDT_compared.csv  ADAUSDT_summary.txt
plots_BNB/: BNBUSDT_compared.csv  BNBUSDT_summary.txt
plots_SOL/: SOLUSDT_compared.csv  SOLUSDT_summary.txt
plots_metrics/: metrics_summary.txt
python/: HOWTO  stream_all_chunks.py  stream_trades_compare_buffered.py
src/: main.rs  metrics.rs  types.rs  writer.rs
src/ingest/: sources_binance.rs
src/storage/: mmap_ring.rs  mod.rs  writer_task.rs
