[package]
name = "consolidator_binance"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }

tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory-mapped file helper
memmap2 = "0.5"

# Error handling
anyhow = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "std"] }
tracing-appender = "0.2"

# Utilities
csv = "1.2"
rand = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
futures-util = "0.3"
libc = "0.2.177"
