[package]
name = "consolidator_binance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
rand = "0.8"
anyhow = "1.0"
crc32fast = "1.3"
memmap2 = "0.5"
parking_lot = "0.12"
lru = "0.8"

# optional
simd-json = { version = "0.6", optional = true }
chrono = "0.4.42"
futures-util = "0.3.31"
libc = "0.2"

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
[features]
default = []
use_simd_json = ["simd-json"]
